feat: initialize monorepo with backend express app and configs
- Add root and backend package.json with workspaces setup
- Set up TypeScript configuration with base and backend tsconfig
- Create basic Express app in backend
- Add gitignore files for root and backend
- Include README files with project documentation

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,12 +3,14 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "dist",
-    "rootDir": "backend/src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
-  },
-  "include": ["backend/src"]
+    "skipLibCheck": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "composite": true,
+    "incremental": true
+  }
 }
