--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dev-connect",
+  "name": "@dev-connect/backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "DevConnect Backend API",
+  "main": "dist/app.js",
   "scripts": {
     "dev": "nodemon --watch src --ext ts,js --exec \"node --loader ts-node/esm src/app.ts\"",
     "build": "tsc",
