feat: refactor backend server initialization and add MongoDB connection
- Updated app.ts to load environment variables and handle server startup errors.
- Introduced connectToDatabase function in db.ts for MongoDB connection management.
- Added user model in user.ts with schema definition for user data.
- Enhanced tsconfig.json for better TypeScript build performance and type checking.
- Updated package.json to include mongoose and dotenv dependencies.

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -2,8 +2,12 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "tsBuildInfoFile": "./.tsbuildinfo",
+    "incremental": true,
+    "skipLibCheck": true,
+    "types": ["node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../../types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
