--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,12 +22,15 @@
   "homepage": "https://github.com/NishanBangera/DevConnect#readme",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^24.7.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.3.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.1"
   }
 }
