--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -6,7 +6,7 @@ PORT=3000
 NODE_ENV=development
 
 # MongoDB connection string
-MONGODB_URI=mongodb://localhost:27017/devconnect
+MONGODB_URL=mongodb://localhost:27017/devconnect
 
 # JWT secret
 JWT_SECRET=your_jwt_secret_here
