--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,16 +21,19 @@
   },
   "homepage": "https://github.com/NishanBangera/DevConnect#readme",
   "devDependencies": {
-    "@types/express": "^5.0.3",
     "@types/dotenv": "^8.2.0",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.7.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1"
   }
 }
