--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DevConnect Monorepo",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "apps/*"
   ],
   "scripts": {
     "dev": "npm run dev --workspace=@dev-connect/backend",
