--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,15 +21,20 @@
   },
   "homepage": "https://github.com/NishanBangera/DevConnect#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/cookie-parser": "^1.4.9",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
